@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-12168.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-12287.tgz',
      'xapian-core.tgz',
-     '967bcbbf13d63eb6e80c51259d179328422965b9',
+     '40e631b7bad766b04d53d53e969366165e8e097b',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-12168.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-12287.tgz',
      'xapian-bindings.tgz',
-     '51ffa2f3ca652c5def202df90d5342694c1f0c7e',
+     'd529598fac845fac7f7c1e164201ed82398c3eec',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-12168.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-12287.tgz',
      'win32msvc.tgz',
-     'eb29d7e085eae8e58aed107d5acfbb4308477d83',
+     'a8c08a641639adc2c5c1467ea75c5057758e072c',
      'xapian-core/win32',
     ),
     ('Xapian extras',
