@@ -1,3 +1,7 @@
+Fri Mar 27 10:06:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Update with new tarballs.
+
 Fri Mar 27 10:04:59 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/build_xapian.sh: Set program-suffix to empty when building:
